--- a/app/views/people/index.haml
+++ b/app/views/people/index.haml
@@ -2,4 +2,4 @@
 
 .people
   = list_people(@current_project,@people)
-  = list_invitations(@current_project.invitations)
+  = list_invitations(@current_project,@invitations)
