--- a/app/views/task_lists/_column.haml
+++ b/app/views/task_lists/_column.haml
@@ -1,6 +1,5 @@
-- if project.editable?(current_user)
-  = task_list_link(project,TaskList.new)
-  = task_list_form(project,TaskList.new)
+= task_list_link(project)
+= task_list_form(project,TaskList.new)
 
 = task_navigation(project)
 
