--- a/app/views/uploads/index.haml
+++ b/app/views/uploads/index.haml
@@ -1,5 +1,5 @@
 - content_for :column do
-  = add_upload_link
+  = add_upload_link(@current_project)
   = edit_side_upload_form(@current_project,Upload.new)
   
 =list_uploads(@current_project,@uploads)
