--- a/public/stylesheets/sass/pages.sass
+++ b/public/stylesheets/sass/pages.sass
@@ -94,7 +94,9 @@ div.active_page
     :line-height 1.4em
   .buttons
     :background rgb(230,230,230)
-    :padding 10px
-      :top 6px
+    :padding 6px 10px
     :-moz-border-radius 8px
     :-webkit-border-radius 8px
+    .add_button
+      :float left
+      :margin 0px
