--- a/public/stylesheets/sass/people.sass
+++ b/public/stylesheets/sass/people.sass
@@ -25,8 +25,30 @@
         :background rgb(200,200,200)
         :-moz-border-radius 5px
         :-webkit-border-radius 5px
-        :width 200px
-        :float right
+        :width 860px
+        :float left
+        h2
+          :color rgb(80,80,80)
+          :margin 0px
+          :padding-left 5px
+        .role
+          :-moz-border-radius 5px
+          :-webkit-border-radius 5px
+          :margin 5px
+            :bottom 0px
+          :padding 5px
+          :background rgb(220,220,220)
+          :float left
+          :width 195px
+          :height 100px
+        .active
+          :background rgb(255,255,255)
+        .submit
+          :width 100%
+          :clear both
+          :padding-top 8px
+            :right 5px
+          :text-align right
       .name
         :float left
         :width 300px
