--- a/app/views/people/_fields.haml
+++ b/app/views/people/_fields.haml
@@ -1,13 +1,15 @@
 .roles
-  = f.label :role, t('.role')
   .role.view
     = f.radio_button :role, 0
     = t('.observer')
   .role.edit
     = f.radio_button :role, 1
+    = t('.commenter')
+  .role.edit
+    = f.radio_button :role, 2
     = t('.participant')
   .role.destroy
-    = f.radio_button :role, 2
+    = f.radio_button :role, 3
     = t('.admin')
         
 -if false #Details Permissions
