only display create a new conversation on index_conversations page

--- a/app/views/task_lists/_primer.haml
+++ b/app/views/task_lists/_primer.haml
@@ -1,9 +1,8 @@
 #primer
   %p= t('.empty')
   .box
-    - if task.editable?(current_user)
+    - if project.editable?(current_user)
       %h2= link_to_function t('.create_first'), show_task_list(project,TaskList.new)
-    
     %p= t '.define'
     %ul
       %li= t '.item1'
