Removing the 'reply to this email' line from emails. Cleaning divider model. Translations.

--- a/app/views/tasks/_archive_box.haml
+++ b/app/views/tasks/_archive_box.haml
@@ -1,4 +1,4 @@
 .archive
   %p
-    Looks like your done with this task.
-  =archive_task_button(project,task_list,task)
+    = t('.you_are_done')
+  = archive_task_button(project,task_list,task)
