--- a/app/views/emailer/notify_task.haml
+++ b/app/views/emailer/notify_task.haml
@@ -12,7 +12,8 @@
     %h2{ :style => email_text(:big) }
       = t('emailer.notify.task')
       = link_to @task.name, project_task_list_task_url(@project, @task_list, @task)
-    %p= t('emailer.notify.assigned_to', :user => @current_user.name)
+    - if @task.assigned
+      %p= t('emailer.notify.assigned_to', :user => @task.assigned.user.name)
     %p= t('emailer.notify.status', :status => localized_status_name(@task))
     - if @task.due_on
       %p= t('emailer.notify.due_on', :date => due_on(@task))
@@ -22,7 +23,7 @@
 
   .actions{ :style => 'font-size: 14px; color: rgb(100,100,100); padding: 15px' }
     %p= t('emailer.notify.view_online', :link => project_task_list_task_url(@project, @task_list, @task))
-    %p= t('emailer.notify.reply')
+    = emailer_answer_to_this_email
 
   .footer{ :style => email_text(:small) }
     %p
