--- a/app/views/tasks/_show.haml
+++ b/app/views/tasks/_show.haml
@@ -3,6 +3,6 @@
   = task_form(project,task_list,task) unless task.closed?
   = people_watching(project,current_user,task) unless task.archived
   = new_comment_form(project,comment, :target => task)
-  =task_archive_box(project,task_list,task) unless task.closed?
+  = task_archive_box(project,task_list,task)
   #comments
     = list_comments(task.comments,task)
