--- a/app/views/tasks/_unarchive_box.haml
+++ b/app/views/tasks/_unarchive_box.haml
@@ -1,4 +1,4 @@
 .archive
   %p
-    This task is closed and archived
-  =unarchive_task_button(project,task_list,task)
+    = t('.task_is_closed')
+  = unarchive_task_button(project,task_list,task)
