Removing delete links

--- a/app/views/pages/_actions.haml
+++ b/app/views/pages/_actions.haml
@@ -1,4 +1,4 @@
 .text_actions
   = edit_page_link(@current_project, @page)
-  = t('common.or')
-  = delete_page_link(@current_project, @page)
+  = #t('common.or')
+  = #delete_page_link(@current_project, @page)
