--- a/app/views/tasks/_actions.haml
+++ b/app/views/tasks/_actions.haml
@@ -1,5 +1,5 @@
-=loading_image(task_id('delete_loading',project,task_list,task))
+= loading_image(task_id('delete_loading',project,task_list,task))
 .text_actions{ :id => task_id('edit_actions',project,task_list,task) }
   = task_link(project,task_list,task)
-  = t('common.or')
-  = delete_task_link(project,task_list,task)
+  = #t('common.or')
+  = #delete_task_link(project,task_list,task)
