--- a/app/views/comments/_new.haml
+++ b/app/views/comments/_new.haml
@@ -3,12 +3,12 @@
   .body.text_area
     = f.text_area :body, :class => 'comment_body'
   .extra
-    -unless comment.project.nil?
+    - if comment.project
       = the_comment_upload_link(comment)
       = upload_area(comment)
-    - unless target.nil?
-      - if target.class.to_s == 'Task'
-        -unless f.object.status == 0
+    - if target
+      - if target.is_a? Task
+        - unless f.object.status == 0
           .statuses
             = f.label :status
             .status.open
