--- a/app/views/emailer/notify_task.haml
+++ b/app/views/emailer/notify_task.haml
@@ -18,7 +18,7 @@
     - if @task.due_on
       %p= t('emailer.notify.due_on', :date => due_on(@task))
 
-  = emailer_list_comments(@task)
+  = emailer_list_comments(@task.comments)
   = emailer_recent_tasks(@project)
 
   .actions{ :style => 'font-size: 14px; color: rgb(100,100,100); padding: 15px' }
