--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -8,7 +8,6 @@ e:compact
 @import forms.sass
 @import flash_box.sass
 @import primers.sass
-@import welcome.sass
 
 @import projects.sass
 @import activities.sass
@@ -35,6 +34,9 @@ e:compact
 @import pages.sass
 @import uploads.sass
 @import invitations.sass
+
+@import example_projects.sass
+@import welcome.sass
 
 @import users.sass
 @import cards.sass
