--- a/public/stylesheets/sass/projects.sass
+++ b/public/stylesheets/sass/projects.sass
@@ -42,6 +42,11 @@
         :padding
           :bottom 5px
         :border-bottom solid 2px rgb(240,240,240)
+      p.new_example_project
+        :font-size 12px
+        :margin 10px
+          :top 20px
+          :bottom 20px
     .column
       :-moz-border-radius
         :topright 5px
