fixed bugs related to profile and added stories

--- a/app/views/cards/_address.haml
+++ b/app/views/cards/_address.haml
@@ -1,5 +1,5 @@
 .address.hoverable
-  = f.select :account_type, Address::TYPES
+  = f.select :account_type, options_for_card_type(Address::TYPES)
   .text_field.street
     =f.label :street
     =f.text_field :street
