--- a/app/views/cards/_social_network.haml
+++ b/app/views/cards/_social_network.haml
@@ -1,5 +1,5 @@
 .text_field.social_network.hoverable
   =f.text_field :name
-  =f.select :account_network_type, SocialNetwork::NETWORK_TYPES
-  =f.select :account_type, SocialNetwork::TYPES
+  =f.select :account_network_type, options_for_card_type(SocialNetwork::NETWORK_TYPES)
+  =f.select :account_type, options_for_card_type(SocialNetwork::TYPES)
   =remove_link_unless_new_record(f)
