--- a/public/stylesheets/sass/users.sass
+++ b/public/stylesheets/sass/users.sass
@@ -59,56 +59,14 @@
     :width 510px
     input
       :width 140px
-  .website,.email_address
-    input
-      :width 300px
-  .twitter    
-    input
-      :width 240px  
-  .address
-    label
-      :float none
-      :display block
-      :clear both
-      :color rgb(160,160,160)
-      :text-align left
-      :width auto
-      :padding 0px
-    .street
-      input
-        :width 440px
-    .city
-      :float left
-      :width 220px
-      input
-        :margin-right 10px      
-        :width 200px
-    .state
-      :float left
-      :width 100px
-      input
-        :margin-right 10px
-        :width 80px
-    .zip
-      :float left
-      :width 100px
-      input
-        :width 100px
-    .country
-      :clear both
-      :margin-bottom 10px
-  a.add_crm_link
-    :display block
-    :float right
-    :width 510px    
-    :font-size 12px
-    :color rgb(160,160,160)
-    :margin-bottom 10px
-  a.add_crm_link:hover
-    :color rgb(0,0,200)
   .submit
     :clear both 
-    
+  .notifications
+    label 
+      :float none
+    .notify
+      :padding-bottom 7px
+      
 div.upload_avatar
   .avatar
     :float left
@@ -226,7 +184,14 @@ div.upload_avatar
       :topleft 5px
     :-webkit-border-top-left-radius 5px
     .user_navigation
-      
+  .content
+    h2
+      :font-size 22px
+      :margin 10px
+        :right 0px
+      :padding
+        :bottom 5px
+      :border-bottom solid 2px rgb(240,240,240)      
     
 .show_users
   .banner
@@ -234,21 +199,38 @@ div.upload_avatar
       :topleft 5px
       :topright 5px
     :-webkit-border-top-left-radius 5px
-    :-webkit-border-top-right-radius 5px  
+    :-webkit-border-top-right-radius 5px
     :background rgb(159,227,236)
     :padding 10px
     h2
       :margin 0px
       :font-size 24px
       span
-        :color rgb(80,80,80)
-        :font-size 16px
+        :vertical-align middle
+      span.login
+        :margin-left 5px
+        :background rgb(182,228,234)
+        :border 1px solid rgb(116,213,226)
+        :padding 5px
+        :font-size 14px
+        :-moz-border-radius 5px
+        :-webkit-border-radius 5px
   .content_wrap
     :float right
     :padding 10px
       :left 0px    
   .column_wrap
     :float left
+    .avatar
+      :-moz-border-radius 4px
+      :-webkit-border-radius 4px
+    .biography
+      :border solid 1px rgb(200,200,200)
+      :background rgb(246,246,246)
+      :-moz-border-radius 4px
+      :-webkit-border-radius 4px
+      :padding 6px
+      :margin-top 4px
   .content
     h2
       :font-size 22px
