--- a/app/views/cards/_website.haml
+++ b/app/views/cards/_website.haml
@@ -1,4 +1,4 @@
 .text_field.website.hoverable
   = f.text_field :name
-  = f.select :account_type, Website::TYPES
+  = f.select :account_type, options_for_card_type(Website::TYPES)
   =remove_link_unless_new_record(f)
