--- a/public/stylesheets/sass/cards.sass
+++ b/public/stylesheets/sass/cards.sass
@@ -17,3 +17,53 @@
     :padding-bottom 5px
   .vcard
     :float right
+
+.edit_users, .update_users
+  .website,.email_address
+    input
+      :width 300px
+  .twitter    
+    input
+      :width 240px  
+  .address
+    label
+      :float none
+      :display block
+      :clear both
+      :color rgb(160,160,160)
+      :text-align left
+      :width auto
+      :padding 0px
+    .street
+      input
+        :width 440px
+    .city
+      :float left
+      :width 220px
+      input
+        :margin-right 10px      
+        :width 200px
+    .state
+      :float left
+      :width 100px
+      input
+        :margin-right 10px
+        :width 80px
+    .zip
+      :float left
+      :width 100px
+      input
+        :width 100px
+    .country
+      :clear both
+      :margin-bottom 10px
+  a.add_crm_link
+    :display block
+    :float right
+    :width 510px    
+    :font-size 12px
+    :color rgb(160,160,160)
+    :margin-bottom 10px
+  a.add_crm_link:hover
+    :color rgb(0,0,200)
+  
