added form styling to jenny helper

--- a/public/stylesheets/sass/forms.sass
+++ b/public/stylesheets/sass/forms.sass
@@ -68,3 +68,11 @@ form
     :background rgb(255,200,200)
     :border 1px red solid
   
+.app_form
+  :background rgb(210,210,210)
+  :-moz-border-radius 5px
+  :-webkit-border-radius 5px
+  :padding 10px
+
+.form_error
+  :background rgb(255,200,200)  
