--- a/public/stylesheets/sass/uploads.sass
+++ b/public/stylesheets/sass/uploads.sass
@@ -1,4 +1,3 @@
-with_description
 .upload
   :margin 0px
     :top 15px
@@ -136,20 +135,6 @@ iframe.upload_form
 .index_uploads
   .content
     :padding 0px
-  form.new_upload
-    :padding 5px
-    .text_field
-      :padding-right 10px
-      input
-        :font-size 14px
-        :width 100%
-    .file     
-      label
-        :font-size 12px
-        :display block
-      input
-        :width 200px
-        :margin-bottom 15px
         
 a.remove
   :color rgb(255,0,0)
@@ -157,3 +142,19 @@ a.remove
   
 body.iframe
   :background rgb(255,255,255)
+  
+.upload_form
+  .text_field
+    :padding-right 10px
+    input
+      :font-size 14px
+      :width 100%
+  .file     
+    label
+      :font-size 12px
+      :display block
+      :width 200px
+    p.error
+      :margin 0px
+  .submit
+    :margin-top 10px
