--- a/public/stylesheets/sass/textilized.sass
+++ b/public/stylesheets/sass/textilized.sass
@@ -16,7 +16,7 @@
     :margin 2px 0 10px
   a
     :text-decoration underline
-  pre, code
+  pre
     :-moz-background-clip border
     :-moz-background-inline-policy continuous
     :-moz-background-origin padding
@@ -31,4 +31,4 @@
       :bottom 10px
     :overflow auto
     :padding 5px 10px
-    :width 540px
+    :width 540px    
