Display usernames in the project show page. Hidden feature: When hovering, it will display their last login date

--- a/public/stylesheets/sass/projects.sass
+++ b/public/stylesheets/sass/projects.sass
@@ -84,12 +84,21 @@
       :padding-left 15px
     .person
       :background transparent url(/images/grey_dot.png) no-repeat scroll 0 4px
+      .status
+        :display inline
+      .last_login
+        :display none
+    .person:hover
+      .status
+        :display none
+      .last_login
+        :display inline
     a
       :color rgb(80,80,80)
       :text-decoration none
     a:hover
       :text-decoration underline
-    .status
+    .status, .last_login
       :float right
       :color #777
     .online
