--- a/app/views/users/_status.haml
+++ b/app/views/users/_status.haml
@@ -1,4 +1,6 @@
 .person{:id => "person_#{user.id}", :class => user_status(user) }
   = user_link(user)
   .status
+    = "@#{user.login}"
+  .last_login
     = time_ago_in_words(user.updated_at)
