--- a/public/stylesheets/sass/projects.sass
+++ b/public/stylesheets/sass/projects.sass
@@ -16,6 +16,15 @@
       :font-weight bold
       :font-variant small-caps
       :font-size 14px
+    h2
+      .help
+        :float right
+        :font-size 12px
+        :font-weight normal
+        :padding-top 3px
+        a
+          :color rgb(150,150,150)
+          :text-decoration underline
     #activities
       .comment
         .name
