--- a/public/stylesheets/sass/projects.sass
+++ b/public/stylesheets/sass/projects.sass
@@ -24,7 +24,10 @@
         :padding-top 3px
         a
           :color rgb(150,150,150)
-          :text-decoration underline
+    .tip
+      :margin 10px 10px
+      :font-size 12px
+      :color rgb(150,150,150)
     #activities
       .comment
         .name
