--- a/app/views/invitations/_invitation.haml
+++ b/app/views/invitations/_invitation.haml
@@ -3,13 +3,15 @@
     = thumb_avatar(invitation.invited_user)
     = t('.invited_user', :invitee => invitation.invited_user.login, :inviter => invitation.user.login)
   - else
+    .new_user_avatar
+      %p +
     = t('.invited_email', :email => invitation.email, :inviter => invitation.user.login)
   .status
     = t('.pending')
     = t('.time_ago', :time_ago_in_words => time_ago_in_words(invitation.updated_at))
-  .resend
+  .links
     = resend_invitation_link(project,invitation)
     = loading('resend_invitation',invitation.id)
-  .actions
-    = delete_invitation_link(invitation)
-  .clear  
+    = t('common.or')
+    %span.discard= delete_invitation_link(invitation)
+  .clear
