--- a/public/stylesheets/sass/people.sass
+++ b/public/stylesheets/sass/people.sass
@@ -1,16 +1,31 @@
 .index_people
   .content
     :padding 5px
-  form.new_invitation
-    :font-size 12px
-    :border 1px rgb(220,220,220) solid
-    :background-color rgb(240,240,240)
-    :padding 10px
-    :margin-bottom 10px
-    h2
-      :font-size 14px
-      :margin 0px
-      :padding 0px
+    .invite_box
+      :font-size 12px
+      :border 1px rgb(220,220,220) solid
+      :background-color rgb(240,240,240)
+      :padding 10px
+      :margin-bottom 10px
+      :-moz-border-radius 5px
+      :-webkit-border-radius 5px
+      :-webkit-border-radius 5px    
+      .invite_by_search
+        :float left
+        :width 400px 
+        h2
+          :font-size 14px
+          :margin 0px
+          :padding 0px
+        .text_field
+          :width 300px
+          label
+            :width 600px
+      .invite_recent
+        :width 240px
+        :float left
+        .invite_user_link
+          :height 28px
   .people
     .person
       :clear both
@@ -72,8 +87,19 @@
             :weight bold
             :size 12px
     .invitation
-      .resent
-        :color rgb(0,120,0)
+      :border 1px solid rgb(195,205,210)
+      :background rgb(235,245,250)
+      :-moz-border-radius 5px
+      :-webkit-border-radius 5px
+      :-webkit-border-radius 5px
+      :padding 7px
+      .links
+        :margin-top 5px
+        a
+          :text-decoration underline
+        span.discard
+          a
+            :color rgb(120,0,0)
 
 .watching
   :background rgb(250,250,250)
