--- a/public/stylesheets/sass/projects.sass
+++ b/public/stylesheets/sass/projects.sass
@@ -9,7 +9,12 @@
         :padding
           :bottom 5px
         :border-bottom solid 2px rgb(240,240,240)
-
+        span
+          :font-weight normal
+          :font-size 12px
+          :color rgb(180,180,180)
+          :float right
+          :padding-top 9px
 
   .show_projects, .index_task_lists
     .project_name
