bunch of styling changes due to task list rework

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -11,7 +11,10 @@ e:compact
 
 @import projects.sass
 @import activities.sass
-@import comments.sass
+
+@import comments/default.sass
+@import comments/show.sass
+@import comments/form.sass
 
 @import conversations.sass
 @import conversations/form.sass
@@ -30,7 +33,6 @@ e:compact
 @import people.sass
 @import time_tracking.sass
 @import invoices.sass
-@import comments.sass
 @import pages.sass
 @import uploads.sass
 @import invitations.sass
