--- a/public/stylesheets/sass/column.sass
+++ b/public/stylesheets/sass/column.sass
@@ -22,6 +22,9 @@ div.column_wrap
       :-webkit-border-radius 5px
       :background rgb(50,50,250)
       :padding 3px
+      span
+        :background rgb(50,50,250)
+        :padding-right 0px
       a
         :color rgb(255,255,255)
       .task_status
