--- a/public/stylesheets/sass/tasks/default.sass
+++ b/public/stylesheets/sass/tasks/default.sass
@@ -40,15 +40,15 @@ span.task_status_resolved
 span.task_status_rejected
   :background rgb(200,0,0)
 
-.show_tasks
-  .archive
-    :margin-top 10px
-    :background rgb(220,220,220)
-    :-moz-border-radius 5px
-    :-webkit-border-radius 5px
-    :padding 20px
-      :top 10px
-    :text-align center
-    p
-      :font-size 13px
-      :margin-bottom 10px
+
+.archive
+  :background rgb(255,255,200)
+  :border 1px rgb(220,220,150) solid  
+  :-moz-border-radius 5px
+  :-webkit-border-radius 5px
+  :padding 20px
+    :top 10px
+  :text-align center
+  p
+    :font-size 13px
+    :margin-bottom 10px
