--- a/public/stylesheets/sass/tasks/index.sass
+++ b/public/stylesheets/sass/tasks/index.sass
@@ -8,16 +8,19 @@ table.task_list
   th
     :font-size 14px
     :border-bottom solid 1px rgb(200,200,200)
-    :padding-bottom 5px
-  td.status
-    :text-align right
-    :width 100px
+    :padding-bottom 5px    
   td
     :padding 4px 5px
     :border-bottom solid 1px rgb(240,240,240)
     span.task_status
       :font-size 11px
       :padding 1px 5px
+  td.status
+    :text-align right
+    :padding-right 0px
+    :width 1%
+    span
+      :padding-right 0px
   .comments_count
     :width 1%
     :text-align right
@@ -27,7 +30,6 @@ table.task_list
       :background rgb(200,200,200)
       :color rgb(100,100,100)
       :padding 2px 5px
-      :border-right solid 1px rgb(150,150,150)
       :border-top solid 1px rgb(100,100,100)
     td.name
       span
