--- a/app/views/tasks/_archive_box.haml
+++ b/app/views/tasks/_archive_box.haml
@@ -1,4 +1,6 @@
-.archive
+.archive#archive_box
   %p
     = t('.you_are_done')
   = archive_task_button(project,task_list,task)
+  = t('common.or')
+  = reopen_task_button(project,task_list,task)
