--- a/app/views/tasks/_td_task.haml
+++ b/app/views/tasks/_td_task.haml
@@ -1,6 +1,6 @@
-%tr{ :class => "#{'overdue' if task.overdue? && task.open? } #{ 'mine' if task.assigned?(current_user) && task.open?}"}
+%tr{ :class => "#{'overdue' if task.overdue? && task.open? } #{ 'mine' if task.assigned_to?(current_user) && task.open?}"}
   %td.status
-    = task_status(task,:content)
+    =task_status(task,:content)
   %td.name
     = link_to task.name, project_task_list_task_path(project,task_list,task)
     - unless (task.due_on.nil? && task.unassigned?) || task.closed?
