--- a/app/views/comments/_new.haml
+++ b/app/views/comments/_new.haml
@@ -11,22 +11,22 @@
         .statuses
           = f.label :status
           - if target.status_new?
-            .status.new 
+            .status.new#status_new
               = f.radio_button :status, Task::STATUSES[:new]
               = t('tasks.status.new')
-          .status.open
+          .status.open#status_open
             = f.radio_button :status, Task::STATUSES[:open]
             = t('tasks.status.open')
             - f.fields_for :target, target do |task_form|
               = task_form.label :assigned_id, t('.assigned_to')
               = task_form.select :assigned_id, options_for_people(comment.project.people)
-          .status.hold
+          .status.hold#status_hold
             = f.radio_button :status, Task::STATUSES[:hold]
             = t('tasks.status.hold')
-          .status.resolved
+          .status.resolved#status_resolved
             = f.radio_button :status, Task::STATUSES[:resolved]
             = t('tasks.status.resolved')
-          .status.rejected
+          .status.rejected#status_rejected
             = f.radio_button :status, Task::STATUSES[:rejected]
             = t('tasks.status.rejected')
           = javascript_tag "$$('.statuses input').each(function(e){ if (e.checked) { e.up('.status').addClassName('active') }; })"
