--- a/public/stylesheets/sass/tasks/default.sass
+++ b/public/stylesheets/sass/tasks/default.sass
@@ -22,7 +22,7 @@ a.new_task_link
   :-webkit-border-bottom-left-radius 5px
   :-webkit-border-bottom-right-radius 5px
   
-span.task_status
+span.task_status, span.current_task_status
   :padding 1px 5px
   :text-transform uppercase
   :color rgb(255,255,255)
